# Switch_Clock_V2

./: CMakeLists.txt  README.md
Switch_Clock/: CMakeLists.txt
components/components/: CMakeLists.txt
components/components/ssd1306/: CMakeLists.txt  font8x8_basic.h  ssd1306.c  ssd1306.h  ssd1306_i2c.c
main/: CMakeLists.txt  main.c  main.h
main/task/: buttons_task.c  cfg_task.c  cli_task.c  cores_task.c  display_task.c  ms_timer_task.c  nvs_task.c  rtc_task.c  switch_timer_task.c  task.h
